[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyensembl"
dynamic = ["version"]
description = "Python interface to Ensembl reference genome metadata"
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typechecks>=0.0.2,<1.0.0",
    "datacache>=1.4.0,<2.0.0",
    "memoized-property>=1.0.2",
    "tinytimer>=0.0.0,<1.0.0",
    "gtfparse>=2.7.0,<3.0.0",
    "serializable>=0.2.1,<2.0.0",
    "numpy>=2.0.0,<3.0.0",
]

[project.scripts]
pyensembl = "pyensembl.shell:run"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pytest-cov",
    "ruff",
    "coveralls",
    "build",
    "tomli; python_version < '3.11'",
]

[tool.setuptools]
packages = ["pyensembl"]

[tool.setuptools.package-data]
pyensembl = ["logging.conf"]

[tool.setuptools.dynamic]
version = {attr = "pyensembl.version.__version__"}
